tests/compile/child_invalid_signature.stderr
error: unsupported child method signature: the single parameter of a dynamic #[child] method must be `name: &str` (shapes: `fn NAME(&self) -> Child` or `fn NAME(&self, name: &str) -> Option<Child>`)
  --> tests/compile/child_invalid_signature.rs:38:28
   |
38 |     fn planet(&self, name: u32) -> Option<Leaf> {
   |                            ^^^

warning: use of deprecated struct `plexus_core::ChildCapabilities`: Use MethodRole::DynamicChild { list_method, search_method } instead. Removed in 0.7.
  --> tests/compile/child_invalid_signature.rs:11:1
   |
11 | / #[plexus_macros::activation(
12 | |     namespace = "leaf",
13 | |     version = "1.0.0",
14 | |     crate_path = "plexus_core"
15 | | )]
   | |__^
   |
   = note: `#[warn(deprecated)]` on by default
   = note: this warning originates in the attribute macro `plexus_macros::activation` (in Nightly builds, run with -Z macro-backtrace for more info)
